; ModuleID = '/home/carl/AnghaBench/zfs/module/zfs/extr_zap_micro.c_zap_lookup_norm.c'
source_filename = "/home/carl/AnghaBench/zfs/module/zfs/extr_zap_micro.c_zap_lookup_norm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@RW_READER = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4
@FTAG = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @zap_lookup_norm(i32* %0, i32 %1, i8* %2, i32 %3, i32 %4, i8* %5, i32 %6, i8* %7, i32 %8, i32* %9) #0 {
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i8*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i8*, align 8
  %20 = alloca i32, align 4
  %21 = alloca i32*, align 8
  %22 = alloca i32*, align 8
  %23 = alloca i32, align 4
  store i32* %0, i32** %12, align 8
  store i32 %1, i32* %13, align 4
  store i8* %2, i8** %14, align 8
  store i32 %3, i32* %15, align 4
  store i32 %4, i32* %16, align 4
  store i8* %5, i8** %17, align 8
  store i32 %6, i32* %18, align 4
  store i8* %7, i8** %19, align 8
  store i32 %8, i32* %20, align 4
  store i32* %9, i32** %21, align 8
  %24 = load i32*, i32** %12, align 8
  %25 = load i32, i32* %13, align 4
  %26 = load i32, i32* @RW_READER, align 4
  %27 = load i32, i32* @TRUE, align 4
  %28 = load i32, i32* @FALSE, align 4
  %29 = load i32, i32* @FTAG, align 4
  %30 = call i32 @zap_lockdir(i32* %24, i32 %25, i32* null, i32 %26, i32 %27, i32 %28, i32 %29, i32** %22)
  store i32 %30, i32* %23, align 4
  %31 = load i32, i32* %23, align 4
  %32 = icmp ne i32 %31, 0
  br i1 %32, label %33, label %35

33:                                               ; preds = %10
  %34 = load i32, i32* %23, align 4
  store i32 %34, i32* %11, align 4
  br label %50

35:                                               ; preds = %10
  %36 = load i32*, i32** %22, align 8
  %37 = load i8*, i8** %14, align 8
  %38 = load i32, i32* %15, align 4
  %39 = load i32, i32* %16, align 4
  %40 = load i8*, i8** %17, align 8
  %41 = load i32, i32* %18, align 4
  %42 = load i8*, i8** %19, align 8
  %43 = load i32, i32* %20, align 4
  %44 = load i32*, i32** %21, align 8
  %45 = call i32 @zap_lookup_impl(i32* %36, i8* %37, i32 %38, i32 %39, i8* %40, i32 %41, i8* %42, i32 %43, i32* %44)
  store i32 %45, i32* %23, align 4
  %46 = load i32*, i32** %22, align 8
  %47 = load i32, i32* @FTAG, align 4
  %48 = call i32 @zap_unlockdir(i32* %46, i32 %47)
  %49 = load i32, i32* %23, align 4
  store i32 %49, i32* %11, align 4
  br label %50

50:                                               ; preds = %35, %33
  %51 = load i32, i32* %11, align 4
  ret i32 %51
}

declare dso_local i32 @zap_lockdir(i32*, i32, i32*, i32, i32, i32, i32, i32**) #1

declare dso_local i32 @zap_lookup_impl(i32*, i8*, i32, i32, i8*, i32, i8*, i32, i32*) #1

declare dso_local i32 @zap_unlockdir(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
